# python-group-based-policy-client

./: .coveragerc  .gitignore  .gitreview  .pylintrc  CONTRIBUTING.rst  README.md  README.rst  gbp_test.sh  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
gbpclient/: gbpshell.py  version.py
gbpclient/common/: utils.py
gbpclient/gbp/v2_0/: groupbasedpolicy.py  purge.py  servicechain.py
gbpclient/tests/unit/: test_auth.py  test_cli20.py  test_cli20_apg.py  test_cli20_externalpolicy.py  test_cli20_externalsegment.py  test_cli20_l2policy.py  test_cli20_l3policy.py  test_cli20_natpool.py  test_cli20_networkservicepolicy.py  test_cli20_policyaction.py  test_cli20_policyclassifier.py  test_cli20_policyrule.py  test_cli20_policytarget.py  test_cli20_policytargetgroup.py  test_cli20_purge.py  test_cli20_service_profile.py  test_cli20_servicechain_instance.py  test_cli20_servicechain_node.py  test_cli20_servicechain_spec.py  test_utils.py
gbpclient/v2_0/: client.py
tools/: gbp.bash_completion  policy.bash_completion
