[metadata]
name = python-group-based-policy-client
summary = CLI and Client Library for Group Based Policy
description-file =
    README.rst
author = Group Based Policy
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/python-group-based-policy-client
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    gbpclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    gbp = gbpclient.gbpshell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
